# alvoc

./: .gitignore  404.html  CHANGELOG.md  README.md  index.html  makefile  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: base-python.yml  pr.yml  release.yml
.github/workflows/actions/package-image/: action.yml
.github/workflows/actions/setup-base/: action.yml
alvoc/: __main__.py  cli.py  main.py
alvoc/cli/: __init__.py  amplicons.py  common.py  constellations.py  convert.py  main.py
alvoc/core/: logging.py  mutations.py
alvoc/core/amplicons/: __init__.py  analyze.py  main.py  visualize.py
alvoc/core/constellations/: __init__.py  core.py  main.py  msa.py
alvoc/core/lineages/: __init__.py  analyze.py  prepare.py  visualize.py
alvoc/core/mutations/: __init__.py  analyze.py  convert.py  helpers.py  prepare.py  utils.py  visualize.py
alvoc/core/precompute/: __init__.py  precompute.py
alvoc/core/utils/: __init__.py  constellations.py  export.py  logging.py  parse.py  precompute.py  qc.py
alvoc/core/variants/lineages/: __init__.py  main.py  visualize.py
assets/: template-README.md
changelog/: index.html
constellations/: index.html
dev/: index.html
docs/: constellations.md  dev.md  index.md  msa.md  reference.md  usage.md
docs/stylesheets/: extra.css
examples/: make_covid_constellations.py
reference/: index.html
scripts/: create_readme.py
scripts/examples/: make_covid_constellations.py  make_flu_constellations.py
search/: search_index.json
tests/test_alvoc/test_core/: test_mutations.py
usage/: index.html
(+11 files in other folders)
