[tool.poetry]
name = "alvoc"
version = "0.1.0"
description = ""
authors = ["mshunjan <manjothunjan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
typer = "^0.12.3"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
numpy = "^2.0.0"
pysam = "^0.22.1"
scikit-learn = "^1.5.1"
ortools = "^9.10.4067"
biopython = "^1.84"

[tool.poetry.scripts]
alvoc = "alvoc.main:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
black = "^24.4.2"
ruff = "^0.5.0"
isort = "^5.13.2"
commitizen = "^3.27.0"
pyinstaller = "^6.9.0"
mkdocs-material = "^9.5.29"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
